@@ -98,6 +98,8 @@
                 <configuration>
                     <argLine>
                         --illegal-access=warn
+                        --add-exports blue.base.spring/test.base.spring.dict=spring.beans,blue.base.core
+                        --add-exports blue.base.spring/test.base.spring.model=spring.beans
                     </argLine>
                 </configuration>
             </plugin>
